<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16_dp"
    tools:context=".EditorActivity"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:text="@string/product_name"
        style="@style/EditorFieldStyleTextView"
        />

    <EditText
        android:id="@+id/edit_product_name"
        android:hint="@string/product_name_example_text"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyleEditView"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:baselineAligned="false"
      android:orientation="horizontal"
      >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

      <TextView
          android:text="@string/price"
          style="@style/EditorFieldStyleTextView"
          />

      <EditText
          android:id="@+id/edit_price"
          android:hint="@string/price_example"
          android:inputType="number"
          style="@style/EditorFieldStyleEditView"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

      <TextView
          android:text="@string/quantity"
          style="@style/EditorFieldStyleTextView"
          />

      <EditText
          android:id="@+id/edit_quantity"
          android:hint="@string/quantity_example"
          android:inputType="number"
          style="@style/EditorFieldStyleEditView"
          />
    </LinearLayout>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:text="@string/supplier_name"
        style="@style/EditorFieldStyleTextView"
        />

    <EditText
        android:id="@+id/edit_supplier_name"
        android:hint="@string/supplier_name_example"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyleEditView"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:text="@string/supplier_phone_number"
        style="@style/EditorFieldStyleTextView"
        />

    <EditText
        android:id="@+id/edit_supplier_phone_number"
        android:digits="0123456789+"
        android:hint="@string/supplier_phone_number_example"
        android:inputType="phone"
        android:maxLength="12"
        style="@style/EditorFieldStyleEditView"
        />
  </LinearLayout>

</LinearLayout>